--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-http://www.django-rest-framework.org/tutorial/2-requests-and-responses/
-
-next -> 3
+jak dodać usera? -> python manage.py createsuperuser
