--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Aplikacja napisana wykorzystując django rest framework.
+REST API -> Django REST framework
 
 Jak uruchomić aplikację?
 -> otworzyć terminal
